2004-06-22  Mike Kestner  <mkestner@ximian.com>

	* configure.in : GLIB check for gobject, not glib.

2004-06-23  Todd Berman  <tberman@off.net>

	* doc/*/*.xml: s/GtkSharp.SignalArgs/GLib.SignalArgs/;

2004-06-17  Larry Ewing  <lewing@ximian.com>

	* gdk/Makefile.am (sources): add Pixdata.custom

	* gdk/Pixdata.custom: add new file to fix Serialize.

	* gnome/CanvasItem.custom: remove the incorrect custom bindings.

	* gnome/Gnome.metadata: stop hiding the AffineRelative and
	AffineAbsolute the generator gets them right they are not out
	params.

	* gdk/Gdk.metadata: mark the Pixdata byte stream as and array hide
	the broken serialize method.

2004-06-18  John Luke  <jluke@cfl.rr.com>

	* sample/rsvg/Makefile.am:  do not reference gnome-sharp and art-sharp
	* sample/rsvg/svghelloworld.cs: rework with just gtk (no gnome deps)

2004-06-15  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : hide the button_new_from_stock ctor.
	* gtk/Button.custom : add a manual ctor implementation.

2004-06-14  Mike Kestner  <mkestner@ximian.com>

	* configure.in : another "really frozen this time" release.
	* gdk/Gdk.metadata : mark a couple array params on Pixbuf.Savev.
	* gdk/Pixbuf.custom : add a Save implementation.

2004-06-14  Mike Kestner  <mkestner@ximian.com>

	* configure.in : bump the version to 0.97, tag.

2004-06-12  Todd Berman  <tberman@sevenl.net>

	* glib/ObjectManager.cs: change CreateInstance overload being used
	to properly pick up protected ctors.

2004-06-11  Todd Berman  <tberman@sevenl.net>

	* gtk/Container.custom:
	* gtk/CellRenderer.custom:
	* gnome/CanvasItem.custom: mark Override* private.
	* doc/en/*/*.xml: update to remove Override* methods.

2004-06-11  Mike Kestner  <mkestner@ximian.com>

	* doc/en/*/*.xml : update to remove Override* methods.
	* generator/Signal.cs : make the Override* methods private.  They
	should not ever be called manually and it saves about 800 "do not
	call this method" doc entries.
