@@ -2,7 +2,7 @@
 AC_INIT(README)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(gtk-sharp, 0.98)
+AM_INIT_AUTOMAKE(gtk-sharp, 0.99)
 AM_MAINTAINER_MODE
 
 API_VERSION=1.0.0.0
