@@ -1,3 +1,7 @@
+2004-06-25  Mike Kestner  <mkestner@ximian.com>
+
+	* configure.in : tag and bump version to 0.99.
+
 2004-06-22  Mike Kestner  <mkestner@ximian.com>
 
 	* configure.in : GLIB check for gobject, not glib.
